--- a/sorce.scss
+++ b/sorce.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #f3145e;
+    background-color: #b1e7da;
     font-family: 'Poppins', sans-serif;
     .outer_box{
         margin: 2rem auto;
@@ -44,8 +44,9 @@ body {
     }
 }
 .img_box {
-    width: 30%;
-    height: 330px;
+    min-width: 300px;
+    max-width: 45%;
+    height: 450px;
     margin-left: 5%;
     .poster_img{
         width: 100%;
